--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12'
     compile 'com.google.code.gson:gson:2.5'
     testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile 'org.glassfish.tyrus:tyrus-container-grizzly-server:1.12'
+    testCompile 'org.glassfish.tyrus:tyrus-server:1.12'
 }
 
 sourceSets {
