--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,13 @@ task javadocs(type: Javadoc) {
     options.links(project.ext.javadocLinks)
 }
 
+task developerJavadocs(type: Javadoc) {
+    source = sourceSets.main.allJava
+    classpath = configurations.compile
+    options.memberLevel = JavadocMemberLevel.PRIVATE
+    options.links(project.ext.javadocLinks)
+}
+
 dependencies {
     compile 'javax.websocket:javax.websocket-client-api:1.1'
     compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12'
