Hopefully this will get coveralls to run

--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:0.3.0'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
     }
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled = true
+        xml.enabled = true // coveralls plugin depends on xml format report
         html.enabled = true
     }
 }
