Gradle shouldn't fail because of unset variables

--- a/build.gradle
+++ b/build.gradle
@@ -74,46 +74,47 @@ artifacts {
 signing {
     sign configurations.archives
 }
+if(project.hasProperty("ossrhUsername") && project.hasProperty("ossrhPassword")) {
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'Pathfinder Android'
-                packaging 'jar'
-                description 'Android/Java client library for the Pathfinder service'
-                url 'http://thepathfinder.xyz'
-
-                scm {
-                    connection 'scm:git:git@github.com:CSSE497/pathfinder-android.git'
-                    developerConnection 'scm:git:git@github.com:CSSE497/pathfinder-android.git'
-                    url 'https://github.com/CSSE497/pathfinder-android'
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
                 }
 
-                licenses {
-                    license {
-                        name 'MIT License'
-                        url 'http://www.opensource.org/licenses/mit-license.php'
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: ossrhUsername, password: ossrhPassword)
+                }
+
+                pom.project {
+                    name 'Pathfinder Android'
+                    packaging 'jar'
+                    description 'Android/Java client library for the Pathfinder service'
+                    url 'http://thepathfinder.xyz'
+
+                    scm {
+                        connection 'scm:git:git@github.com:CSSE497/pathfinder-android.git'
+                        developerConnection 'scm:git:git@github.com:CSSE497/pathfinder-android.git'
+                        url 'https://github.com/CSSE497/pathfinder-android'
                     }
-                }
 
-                developers {
-                    developer {
-                        id 'robinsdm'
-                        name 'David Robinson'
-                        organization 'Pathfinder'
-                        organizationUrl = 'https://github.com/CSSE497/pathfinder'
-                        email 'robinsdm@rose-hulman.edu'
+                    licenses {
+                        license {
+                            name 'MIT License'
+                            url 'http://www.opensource.org/licenses/mit-license.php'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'robinsdm'
+                            name 'David Robinson'
+                            organization 'Pathfinder'
+                            organizationUrl = 'https://github.com/CSSE497/pathfinder'
+                            email 'robinsdm@rose-hulman.edu'
+                        }
                     }
                 }
             }
