Build shouldn't check for publishing parameters on Travis anymore

--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-if(project.hasProperty('bintrayUser')) {
+if(project.hasProperty('publishToJcenter')) {
     publishing {
         publications {
             mavenJava(MavenPublication) {
