--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ apply plugin: 'signing'
 apply plugin: 'java'
 
 group = "xyz.thepathfinder"
-version = '0.0.3'
+version = '0.0.4'
 
 
 
@@ -149,7 +149,7 @@ if(project.hasProperty('publishToJcenter')) {
 
 
 dependencies {
-    compile 'javax.websocket:javax.websocket-client-api:1.1'
+    //compile 'javax.websocket:javax.websocket-client-api:1.1'
     compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12'
     compile 'com.google.code.gson:gson:2.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
