--- a/build.gradle
+++ b/build.gradle
@@ -159,6 +159,8 @@ dependencies {
     compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12'
     compile 'com.google.code.gson:gson:2.5'
     compile 'org.slf4j:slf4j-api:1.7.16'
+    testCompile 'ch.qos.logback:logback-classic:1.1.3'
+    testCompile 'ch.qos.logback:logback-core:1.1.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.glassfish.tyrus:tyrus-container-grizzly-server:1.12'
     testCompile 'org.glassfish.tyrus:tyrus-server:1.12'
