--- a/examples/ChimneySwap/app/src/main/AndroidManifest.xml
+++ b/examples/ChimneySwap/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="xyz.thepathfinder.www.chimneyswap">
+    package="xyz.thepathfinder.chimneyswap">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
