--- a/examples/ChimneySwap/app/build.gradle
+++ b/examples/ChimneySwap/app/build.gradle
@@ -14,12 +14,8 @@ android {
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    compile files('libs/pathfinder-android-0.0.15.jar')
-    compile 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.12'
     compile project(':volley')
-    //compile 'xyz.thepathfinder:pathfinder-android:0.0.13'
-    compile 'ch.qos.logback:logback-classic:1.1.3'
-    compile 'ch.qos.logback:logback-core:1.1.3'
+    compile 'xyz.thepathfinder:pathfinder-android:0.0.16'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
