--- a/examples/ChimneySwap/app/build.gradle
+++ b/examples/ChimneySwap/app/build.gradle
@@ -9,12 +9,21 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
+
+/*    dexOptions {
+        preDexLibraries = false
+    }*/
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':volley')
+
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'ch.qos.logback:logback-core:1.1.3'
     compile 'xyz.thepathfinder:pathfinder-android:0.0.16'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
