--- a/examples/ChimneySwap/.gitmodules
+++ b/examples/ChimneySwap/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "volley"]
-	path = volley
+[submodule "examples/ChimneySwap/volley"]
+	path = examples/ChimneySwap/volley
 	url = https://android.googlesource.com/platform/frameworks/volley
