--- a/examples/ChimneySwap/app/build.gradle
+++ b/examples/ChimneySwap/app/build.gradle
@@ -16,11 +16,11 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':volley')
-
-    compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    //compile files('libs/pathfinder-android-1.0.0.jar')
+    compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'ch.qos.logback:logback-core:1.1.3'
-    compile 'xyz.thepathfinder:pathfinder-android:0.0.16'
+    compile 'xyz.thepathfinder:pathfinder-android:1.0.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.code.gson:gson:2.5'
